changed some items name

--- a/blogs.html
+++ b/blogs.html
@@ -115,7 +115,7 @@
     <div class="recipe-grid">
       <div class="recipe-card">
         <img src="img/m5.jpg" />
-        <h3>Classic Chocolate Cake</h3>
+        <h3>Classic Oreo Cake</h3>
         <p>A rich, moist chocolate cake topped with creamy chocolate ganache. Perfect for celebrations or as a decadent
           dessert at home.</p>
         <a href="#" class="read-more">Get Recipe</a>
