--- a/blogs.html
+++ b/blogs.html
@@ -111,7 +111,7 @@
   <!-- Featured Recipes Section -->
   <section class="featured-recipes">
     <h2>Featured Recipes</h2>
-    <p>Try our popular recipes straight from the bakery. Perfect for home bakers!</p>
+    <p>Try our popular recipe straight from the bakery. Perfect for home bakers!</p>
     <div class="recipe-grid">
       <div class="recipe-card">
         <img src="img/m5.jpg" />
