removed s in muffins

--- a/blogs.html
+++ b/blogs.html
@@ -123,7 +123,7 @@
       <div class="recipe-card">
         <img src="img/b8.jpg" />
         <h3>Blueberry Muffins</h3>
-        <p>Fresh, fluffy muffins bursting with juicy blueberries and topped with a golden crust. Ideal for breakfast or
+        <p>Fresh, fluffy muffin bursting with juicy blueberries and topped with a golden crust. Ideal for breakfast or
           an afternoon snack.</p>
         <a href="#" class="read-more">Get Recipe</a>
       </div>
